plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '7.1.1'
}

group = 'Kludwisz'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
    maven { url "https://maven.seedfinding.com" }
    maven { url "https://www.jitpack.io" }
}

dependencies {
    implementation('com.seedfinding:mc_math:1.171.0') 		{ transitive = false }
    implementation('com.seedfinding:mc_seed:1.171.1') 		{ transitive = false }
    implementation('com.seedfinding:mc_core:1.200.0') 		{ transitive = false }
    implementation('com.seedfinding:mc_noise:1.171.1') 		{ transitive = false }
    implementation('com.seedfinding:mc_reversal:1.171.1') 	{ transitive = false }
    implementation('com.seedfinding:mc_biome:1.171.1') 		{ transitive = false }
    implementation('com.seedfinding:mc_terrain:1.171.1') 	{ transitive = false }
    implementation('com.seedfinding:mc_feature:1.171.7') 	{ transitive = false }

    implementation group: 'it.unimi.dsi', name: 'fastutil-core', version: '8.5.13'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'kludwisz.generator.Main'
        )
    }
}